# analise_ocr

./: .gitignore  README.md  ocr.py  pyproject.toml
services/: docs_to_base64.py
